--- a/MANUALHTML/self.html
+++ b/MANUALHTML/self.html
@@ -136,7 +136,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : self &lt;f1&gt; &lt;f2&gt; ... [&lt;file&gt;]
         : self -d &lt;f1&gt; &lt;f2&gt; ... &lt;string&gt;
-Version : Fri Aug 20 22:29:15 JST 2022</pre>
+Version : Oct 20 17:32:09 JST 2022</pre>
 <h3>【説明】</h3>
 <p>fileから指定したフィールドのデータだけを取り出して出力する(<code>self=select</code>field)。<code>&lt;file&gt;</code>として<code>-</code>を指定するかまたは省略すると標準入力を使用する。フィールド指定において0は全フィールドを意味する。コマンド入力が「<code>self</code>」でパラメータがないときはコマンドの構文を表示して終了する。<code>-d</code>オプションが指定された場合、引数の文字列に対して処理が適用される。</p>
 <h3>【例1】</h3>
@@ -235,7 +235,7 @@ $</pre>
 <p><a href="delf.html" class="command">delf(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Sat Aug 20 22:29:15 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
