--- a/MANUALHTML/cgi-name.html
+++ b/MANUALHTML/cgi-name.html
@@ -136,7 +136,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : cgi-name [-d&lt;c&gt;][-i&lt;string&gt;] [&lt;param_file&gt;]
 Option  :          [--template &lt;html&gt;]
-Version : Sun Oct  2 14:17:02 JST 2022
+Version : Oct 20 17:32:09 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>cgi-name</code>はWEBサーバのCGI POSTメソッドで受け渡されるデータをネーム形式へ変換する。</p>
@@ -214,7 +214,7 @@ $</pre>
 <p><a href="mime-read.html" class="command">mime-read(1)</a>、<a href="nameread.html" class="command">nameread(1)</a>、<a href="name-format.html" class="command">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Sun Oct  2 14:16:48 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
