--- a/MANUALHTML/filehame.html
+++ b/MANUALHTML/filehame.html
@@ -135,7 +135,7 @@
 <p><code>filehame</code> :  テンプレートにファイルをはめ込み</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : filehame -l&lt;string&gt; &lt;template&gt; [&lt;data&gt;]
-Version : Sat Sep 24 10:59:05 JST 2022
+Version : Oct 20 17:32:09 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;template&gt;</code>ファイル中で文字列<code>&lt;string&gt;</code>が含まれる行を<code>&lt;data&gt;</code>ファイルの中身に置き換える。</p>
@@ -178,7 +178,7 @@ $</pre>
 <p><a href="formhame.html" class="command">formhame(1)</a>、<a href="mojihame.html" class="command">mojihame(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Sat Sep 24 11:00:18 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
