--- a/MANUALHTML/han.html
+++ b/MANUALHTML/han.html
@@ -136,10 +136,10 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : han f1 f2 .. [file]
           han -d string
-Version : Mon Mar 21 16:31:46 JST 2022
+Version : Oct 20 17:32:09 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>引数のファイルまたは標準入力のテキストデータの、全角スペース、全角英数記号およびカタカナの部分をすべて半角に変換して出力する。</p>
+<p>引数のファイルまたは標準入力のテキストデータの、全角スペース、全角英数記号およびカタカナの部分をすべて半角に変換して出力する。フィールド指定において0は全フィールドを意味する。コマンド入力が「<code>han</code>」でパラメータがないときはコマンドの構文を表示して終了する。</p>
 <h3>【例1】</h3>
 <p>引数のファイルの指定したフィールドの中身を半角に変換する。</p>
 <pre class="prettyprint">$ cat data
@@ -174,7 +174,7 @@ $</pre>
 <p><a href="zen.html" class="command">zen(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 16:43:52 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
