--- a/MANUALHTML/sm2.html
+++ b/MANUALHTML/sm2.html
@@ -135,7 +135,7 @@
 <p><code>sm2</code> :  キー単位での値の集計</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : sm2 [+count] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; [&lt;file&gt;]
-Version : Fri Jul 29 15:32:20 JST 2022</pre>
+Version : Oct 20 17:32:09 JST 2022</pre>
 <h3>【説明】</h3>
 <p><code>&lt;file&gt;</code>ファイルから、キーが同じ行の各フィールドの値を集計する。k1で指定したフィールドからk2で指定したフィールドまでをキーとして、s1で指定したフィールドからs2で指定したフィールドまでの各フィールドを集計する。同じキーをもつ行は1行に集計されて出力される。なお、キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力はされない。</p>
 <h3>【例1】</h3>
@@ -207,7 +207,7 @@ $</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 29 15:44:45 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
