--- a/MANUALHTML/zen.html
+++ b/MANUALHTML/zen.html
@@ -136,10 +136,10 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : zen  [-k] [&lt;f1&gt; &lt;f2&gt; ..] [&lt;file&gt;]
         : zen -d [&lt;string&gt;]
-Version : Tue Sep  6 08:46:04 JST 2022
+Version : Oct 20 17:32:09 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>引数のファイルまたは標準入力におけるテキストデータの半角英数記号およびカタカナをすべて全角に変換して出力する。</p>
+<p>引数のファイルまたは標準入力におけるテキストデータの半角英数記号およびカタカナをすべて全角に変換して出力する。フィールド指定において0は全フィールドを意味する。コマンド入力が「<code>zen</code>」でパラメータがないときはコマンドの構文を表示して終了する。</p>
 <h3>【例1】</h3>
 <p>引数のファイルの指定したフィールドの中身を全角に変換する。</p>
 <pre class="prettyprint">$ cat data
@@ -175,7 +175,7 @@ $</pre>
 <p><a href="han.html" class="command">han(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Tue Sep  6 16:40:00 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
