--- a/MANUALHTML/rjson.html
+++ b/MANUALHTML/rjson.html
@@ -106,13 +106,18 @@
               <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="wjson.html">wjson(1)</a></li>
               <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-                            <li class="separator"><hr></li>
+              <li></li>
+
+<li></li>
+
+              <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -256,10 +261,10 @@ data6 6.62607e-34</pre>
 2 1 c
 2 2 d</pre>
 <h3>【関連項目】</h3>
-<p><a href="xmldir.html" class="command">xmldir(1)</a></p>
+<p><a href="wjson.html" class="command">wjson(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Mon Sep 12 16:52:11 JST 2022</div>
+    <div id="lastmodified">Last modified: Thu Oct 27 16:33:08 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
