dayslash permits an extra --output argument.

--- a/MANUALHTML/dayslash.html
+++ b/MANUALHTML/dayslash.html
@@ -139,8 +139,8 @@
 <h3>【名前】</h3>
 <p><code>dayslash</code> :  日付と時刻のフォーマット変換</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : dayslash [-r] &lt;format&gt; &lt;field&gt; &lt;file&gt;
-Version : Wed May 20 04:47:48 JST 2020
+<pre class="list">Usage   : dayslash [-r] [--output] &lt;format&gt; &lt;field&gt; [&lt;file&gt;]
+Version : Mon Nov 21 07:17:29 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p>標準入力または入力ファイル<code>&lt;file&gt;</code>の指定フィールド<code>&lt;field&gt;</code>のデータのフォーマットが次の3パターンのいずれかである場合、<code>&lt;format&gt;</code>で指定した形式に変換して出力する。次の3パターンのいずれでもない場合、入力データをそのまま出力する。フォーマットは桁数のみを検証し、年月日時分秒の正当性は評価しない。</p>
@@ -181,7 +181,7 @@ $</pre>
 <p><a href="calclock.html" class="command">calclock(1)</a>、<a href="mdate.html" class="command">mdate(1)</a>、<a href="yobi.html" class="command">yobi(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 16:40:42 JST 2022</div>
+    <div id="lastmodified">Last modified: Mon Nov 21 07:19:21 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
