--- a/MANUALHTML/kasan.html
+++ b/MANUALHTML/kasan.html
@@ -139,11 +139,10 @@
 <h3>【名前】</h3>
 <p><code>kasan</code> :  累計</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : kasan [+r] [ref=&lt;ref&gt;] key=&lt;n&gt; &lt;file&gt;
-Version : Sat Sep 19 23:49:25 JST 2020
-Edition : 1</pre>
+<pre class="list">Usage   : kasan [+r] [ref=&lt;ref&gt;] key=&lt;n&gt; [&lt;file&gt;]
+Version : Mon Nov 21 02:12:05 JST 2022</pre>
 <h3>【説明】</h3>
-<p>引数のファイルまたは標準入力のテキストデータの指定したフィールドの値を、各行ごとに加算して指定したフィールドの次のフィールドに挿入する。累計値を求める場合などに使用する。</p>
+<p>引数のファイルまたは標準入力のテキストデータの指定したフィールドの値を、各行ごとに加算して指定したフィールドの次のフィールドに挿入する。累計値を求める場合などに使用する。<code>&lt;file&gt;</code>として<code>-</code>を指定するか省略すると標準入力を使用する。</p>
 <h3>【例1】</h3>
 <p>店別の累計の仕入れ値を算出する。ここでは4フィールド目の値を加算して5フィールド目に挿入する。</p>
 <pre class="prettyprint">$ cat data
@@ -256,7 +255,7 @@ $</pre>
 <p><a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: MODIFIED</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
