--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -139,14 +139,13 @@
 <h3>【名前】</h3>
 <p><code>ratio</code> :  構成比算出</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : ratio key=&lt;key&gt; &lt;file&gt;
+<pre class="list">Usage   : ratio key=&lt;key&gt; [&lt;file&gt;]
 Option  : ref=&lt;ref&gt;             ←参照キーの指定
         : -&lt;s&gt;                  ←小数点以下の精度
         : +&lt;n&gt;h                 ←先頭&lt;n&gt;行をヘッダーとみなす
-Version : Tue Oct 20 15:17:47 JST 2020
-Edition : 1</pre>
+Version : Mon Nov 21 02:12:05 JST 2022</pre>
 <h3>【説明】</h3>
-<p>引数のファイルまたは標準入力のテキストデータに対し、<code>key=</code>で指定したフィールドに対して全行の合計に対する各フィールドの値の構成比を算出し、次のフィールドに挿入して出力する。</p>
+<p>引数のファイルまたは標準入力のテキストデータに対し、<code>key=</code>で指定したフィールドに対して全行の合計に対する各フィールドの値の構成比を算出し、次のフィールドに挿入して出力する。<code>&lt;file&gt;</code>として<code>-</code>を指定するか省略すると標準入力を使用する。</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ cat data
 a店 1日目 103  62               ←店名 日付 売数 客数
@@ -240,7 +239,7 @@ $</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: MODIFIED</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
