Update MANUAL/MANUALHTML of 1bai, calclock, cap, cjoin0, cjoin1, cjoin2, kasan and ratio.

--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -239,7 +239,7 @@ $</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: MODIFIED</div>
+    <div id="lastmodified">Last modified: Sat Feb  4 18:01:52 JST 2023</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
