--- a/MANUALHTML/han.html
+++ b/MANUALHTML/han.html
@@ -141,7 +141,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : han f1 f2 .. [file]
           han -d string
-Version : Oct 20 17:32:09 JST 2022
+Version : Mon Feb 20 01:49:00 JST 2023
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの、全角スペース、全角英数記号およびカタカナの部分をすべて半角に変換して出力する。フィールド指定において0は全フィールドを意味する。コマンド入力が「<code>han</code>」でパラメータがないときはコマンドの構文を表示して終了する。</p>
@@ -179,9 +179,9 @@ $</pre>
 <p><a href="zen.html" class="command">zen(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
+    <div id="lastmodified">Last modified: Mon Feb 20 01:48:41 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
