--- a/MANUALHTML/zen.html
+++ b/MANUALHTML/zen.html
@@ -141,7 +141,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : zen  [-k] [&lt;f1&gt; &lt;f2&gt; ..] [&lt;file&gt;]
         : zen -d [&lt;string&gt;]
-Version : Oct 20 17:32:09 JST 2022
+Version : Mon Feb 20 01:49:00 JST 2023
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力におけるテキストデータの半角英数記号およびカタカナをすべて全角に変換して出力する。フィールド指定において0は全フィールドを意味する。コマンド入力が「<code>zen</code>」でパラメータがないときはコマンドの構文を表示して終了する。</p>
@@ -180,9 +180,9 @@ $</pre>
 <p><a href="han.html" class="command">han(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
+    <div id="lastmodified">Last modified: Mon Feb 20 01:48:41 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
