wjson permits empty -m and -s.

--- a/MANUALHTML/wjson.html
+++ b/MANUALHTML/wjson.html
@@ -139,13 +139,13 @@
 <h3>【名前】</h3>
 <p><code>wjson</code> :  フィールド形式ファイルを JSON 形式に変換する</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : wjson [-p&lt;c&gt;][-m&lt;c&gt;][-s&lt;c&gt;][-n&lt;string&gt;] [&lt;field-file&gt;]
+<pre class="list">Usage   : wjson [-p|-p&lt;c&gt;][-m|-m&lt;c&gt;][-s&lt;c&gt;][-n&lt;string&gt;] [&lt;field-file&gt;]
           --null
           --truefalse
-Version : Fri Oct 28 08:01:44 JST 2022
+Version : Wed Feb 22 16:37:21 JST 2023
 Edition : 2</pre>
 <h3>【説明】</h3>
-<p>フィールド形式ファイル &lt;field<code>-file</code>&gt; を JSON 形式(RFC8259)に変換します。</p>
+<p>フィールド形式ファイル <code>&lt;field-file&gt;</code> を JSON 形式(RFC8259)に変換します。</p>
 <p>キー部の項目はデフォルトで<code>&quot;.&quot;</code>で区切られますが、値が数字の時は、リストの項番を意味し、それ以外(文字列)の時は、オブジェクトのキー名を意味します。キー部の階層構造に従い、フィールド形式のファイルを JSON 形式に変換します。</p>
 <h3>【オプション】</h3>
 <p><code>-p</code>: キー部の区切り文字を変更します。デフォルトは<code>&quot;.&quot;</code>です。</p>
@@ -236,9 +236,9 @@ data6 0.000000000000000000000000000000000662607</pre>
 <p><a href="rjson.html" class="command">rjson(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Oct 28 08:06:15 JST 2022</div>
+    <div id="lastmodified">Last modified: Wed Feb 22 16:37:21 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
