--- a/MANUALHTML/cgi-name.html
+++ b/MANUALHTML/cgi-name.html
@@ -141,7 +141,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : cgi-name [-d&lt;c&gt;][-i&lt;string&gt;] [&lt;param_file&gt;]
 Option  :          [--template &lt;html&gt;]
-Version : Oct 20 17:32:09 JST 2022
+Version : Mon Feb 20 01:49:00 JST 2023
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>cgi-name</code>はWEBサーバのCGI POSTメソッドで受け渡されるデータをネーム形式へ変換する。</p>
@@ -219,9 +219,9 @@ $</pre>
 <p><a href="mime-read.html" class="command">mime-read(1)</a>、<a href="nameread.html" class="command">nameread(1)</a>、<a href="name-format.html" class="command">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Oct 21 08:21:02 JST 2022</div>
+    <div id="lastmodified">Last modified: Sat Mar 18 14:13:31 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
