--- a/MANUALHTML/filehame.html
+++ b/MANUALHTML/filehame.html
@@ -140,7 +140,7 @@
 <p><code>filehame</code> :  テンプレートにファイルをはめ込み</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : filehame -l&lt;string&gt; &lt;template&gt; [&lt;data&gt;]
-Version : Oct 20 17:32:09 JST 2022
+Version : Thu 20 Oct 17:32:09 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;template&gt;</code>ファイル中で文字列<code>&lt;string&gt;</code>が含まれる行を<code>&lt;data&gt;</code>ファイルの中身に置き換える。</p>
