--- a/MANUALHTML/kasan.html
+++ b/MANUALHTML/kasan.html
@@ -140,7 +140,7 @@
 <p><code>kasan</code> :  累計</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : kasan [+r] [ref=&lt;ref&gt;] key=&lt;n&gt; [&lt;file&gt;]
-Version : Mon Nov 21 02:12:05 JST 2022</pre>
+Version : Mon Mar 20 00:00:00 JST 2023</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの指定したフィールドの値を、各行ごとに加算して指定したフィールドの次のフィールドに挿入する。累計値を求める場合などに使用する。<code>&lt;file&gt;</code>として<code>-</code>を指定するか省略すると標準入力を使用する。</p>
 <h3>【例1】</h3>
@@ -165,7 +165,7 @@ a店 7日目 412 301 702
 $</pre>
 <h3>【例2】</h3>
 <p>あるフィールドの値が変わった場所で加算をリセットする場合は、そのリセットのキーとなるフィールドを<code>ref=</code>で指定する。たとえば店別の累計仕入数を算出する場合には、次のように1フィールド目が変更されるごとに加算をリセットする。</p>
-<p><code>ref=&lt;ref&gt;</code>で指定できるのは数値、範囲(/)、<code>NF NF -&lt;n&gt;</code>である。</p>
+<p><code>ref=&lt;ref&gt;</code>で指定できるのは数値、範囲(/)、<code>NF</code><code>NF</code><code>-&lt;n&gt;</code>である。</p>
 <pre class="prettyprint">$ cat data
 a店 1日目 103 62                ←店名 日付 売れ数 仕入数
 a店 2日目 157 94
@@ -233,7 +233,7 @@ B 2.34 4.34
 B 3 7.34
 $</pre>
 <h3>【例5】</h3>
-<p><code>key=&lt;pos&gt;</code>で指定できるのは数値、範囲(/)、列挙(@)、<code>NF NF -&lt;n&gt;</code>である。</p>
+<p><code>key=&lt;pos&gt;</code>で指定できるのは数値、範囲(/)、列挙(@)、<code>NF</code><code>NF</code><code>-&lt;n&gt;</code>である。</p>
 <pre class="prettyprint">$ kasan key=1 data</pre>
 <p>第2から第3フィールドの各フィールドを加算し、加算値をそれぞれのフィールドの直後に挿入するには次のようにコマンドを実行する。</p>
 <pre class="prettyprint">$ cat data
@@ -255,9 +255,9 @@ $</pre>
 <p><a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Sat Feb  4 18:01:52 JST 2023</div>
+    <div id="lastmodified">Last modified: Mon Mar 20 09:12:23 JST 2023 </div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
