--- a/MANUALHTML/rank.html
+++ b/MANUALHTML/rank.html
@@ -139,11 +139,10 @@
 <h3>【名前】</h3>
 <p><code>rank</code> :  行に階数を追加</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : rank ref=&lt;ref&gt; key=&lt;key&gt; &lt;file&gt;
-Version : Mon Oct 21 02:12:05 JST 2022
-Edition : 1</pre>
+<pre class="list">Usage   : rank [ref=&lt;ref&gt;] [key=&lt;key&gt;] [&lt;file&gt;]
+Version : Mon Mar 20 00:00:00 JST 2023</pre>
 <h3>【説明】</h3>
-<p>fileの各行に階数を追加する。<code>ref=&lt;ref&gt;</code>で参照キーフィールドを指定した場合、参照キーフィールドが変化した段階で階数を1に初期化する。<code>key=&lt;key&gt;</code>で値フィールドを指定した場合、値が同じ間は同じ階数を追加する。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。<code>ref=</code>指定または<code>key=</code>指定があるときは<code>&lt;file&gt;</code>を省略して標準入力を使用する。</p>
+<p>fileの各行に階数を追加する。<code>ref=&lt;ref&gt;</code>で参照キーフィールドを指定した場合、参照キーフィールドが変化した段階で階数を1に初期化する。<code>key=&lt;key&gt;</code>で値フィールドを指定した場合、値が同じ間は同じ階数を追加する。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。ref指定またはkey指定があるときは<code>&lt;file&gt;</code>を省略して標準入力を使用することができる。</p>
 <h3>【例1】基本パターン</h3>
 <p>引数を何も指定しないときは、単純に行番号を追加する。</p>
 <pre class="prettyprint">$ cat data
@@ -166,8 +165,8 @@ $</pre>
 7 USA SAM_______ 29
 8 USA TOM_______ 35
 $</pre>
-<h3>【例2】ref=指定</h3>
-<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2 ref=3@2/5</code>などの連続・不連続のフィールドを指定することも可能。</p>
+<h3>【例2】ref指定</h3>
+<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2</code><code>ref=3@2/5</code> などの連続・不連続のフィールドを指定することも可能。</p>
 <pre class="prettyprint">$ rank ref=1 data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
@@ -209,9 +208,9 @@ $</pre>
 <p><a href="count.html" class="command">count(1)</a>、<a href="gyo.html" class="command">gyo(1)</a>、<a href="juni.html" class="command">juni(1)</a>、<a href="retu.html" class="command">retu(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Thu Aug 11 10:01:38 JST 2022</div>
+    <div id="lastmodified">Last modified: Mon Mar 20 09:12:23 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
