--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -143,7 +143,7 @@
 Option  : ref=&lt;ref&gt;             ←参照キーの指定
         : -&lt;s&gt;                  ←小数点以下の精度
         : +&lt;n&gt;h                 ←先頭&lt;n&gt;行をヘッダーとみなす
-Version : Mon Nov 21 02:12:05 JST 2022</pre>
+Version : Mon Mar 20 00:00:00 JST 2023</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータに対し、<code>key=</code>で指定したフィールドに対して全行の合計に対する各フィールドの値の構成比を算出し、次のフィールドに挿入して出力する。<code>&lt;file&gt;</code>として<code>-</code>を指定するか省略すると標準入力を使用する。</p>
 <h3>【例1】</h3>
@@ -219,7 +219,7 @@ d店 1日目   75 11.0   48
 e店 1日目  211 31.0  140
 $</pre>
 <h3>【例4】-&lt;s>オプション</h3>
-<p>-&lt;数値&gt;で構成比の小数点以下の精度を指定できる。</p>
+<p><code>-</code><code>&lt;数値&gt;</code>で構成比の小数点以下の精度を指定できる。</p>
 <pre class="prettyprint">$ cat data
 a店 1日目 103  62               ←店名 日付 売数 客数
 b店 1日目 210 113
@@ -239,9 +239,9 @@ $</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Sat Feb  4 18:01:52 JST 2023</div>
+    <div id="lastmodified">Last modified: Mon Mar 20 09:12:23 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
