--- a/MANUALHTML/sm4.html
+++ b/MANUALHTML/sm4.html
@@ -6,15 +6,6 @@
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
   <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
-  <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
-  <![endif]-->
-  <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
-  <![endif]-->
-  <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
-  <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
 <body>
@@ -29,90 +20,91 @@
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
               <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="fromcsv.html">fromcsv(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
+              <li><a href="marume.html">marume(1)</a></li>
+              <li><a href="tateyoko.html">tateyoko(1)</a></li>
+              <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
+              <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
+              <li><a href="loopj.html">loopj(1)</a></li>
+              <li><a href="ycat.html">ycat(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
+              <li><a href="mdate.html">mdate(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
+              <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="tocsv.html">tocsv(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="getlast.html">getlast(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
+              <li><a href="unmap.html">unmap(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="block_getlast.html">block_getlast(1)</a></li>
+              <li><a href="count.html">count(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="calsed.html">calsed(1)</a></li>
-              <li><a href="cap.html">cap(1)</a></li>
-              <li><a href="cgi-name.html">cgi-name(1)</a></li>
-              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
-              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
-              <li><a href="check_date_name.html">check_date_name(1)</a></li>
-              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
-              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
-              <li><a href="check_need_name.html">check_need_name(1)</a></li>
-              <li><a href="cjoin0.html">cjoin0(1)</a></li>
-              <li><a href="cjoin1.html">cjoin1(1)</a></li>
-              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
-              <li><a href="cjoin2.html">cjoin2(1)</a></li>
-              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
-              <li><a href="count.html">count(1)</a></li>
-              <li><a href="ctail.html">ctail(1)</a></li>
-              <li><a href="dayslash.html">dayslash(1)</a></li>
-              <li><a href="delf.html">delf(1)</a></li>
-              <li><a href="delr.html">delr(1)</a></li>
-              <li><a href="divsen.html">divsen(1)</a></li>
-              <li><a href="exist.html">exist(1)</a></li>
-              <li><a href="extname.html">extname(1)</a></li>
-              <li><a href="filehame.html">filehame(1)</a></li>
-              <li><a href="formhame.html">formhame(1)</a></li>
-              <li><a href="fpad.html">fpad(1)</a></li>
-              <li><a href="fromcsv.html">fromcsv(1)</a></li>
-              <li><a href="fsed.html">fsed(1)</a></li>
-              <li><a href="getfirst.html">getfirst(1)</a></li>
-              <li><a href="getlast.html">getlast(1)</a></li>
-              <li><a href="gyo.html">gyo(1)</a></li>
-              <li><a href="haba.html">haba(1)</a></li>
-              <li><a href="han.html">han(1)</a></li>
-              <li><a href="isdate.html">isdate(1)</a></li>
-              <li><a href="itouch.html">itouch(1)</a></li>
-              <li><a href="join0.html">join0(1)</a></li>
-              <li><a href="join1.html">join1(1)</a></li>
-              <li><a href="join1x.html">join1x(1)</a></li>
-              <li><a href="join2.html">join2(1)</a></li>
-              <li><a href="join2x.html">join2x(1)</a></li>
-              <li><a href="joinx.html">joinx(1)</a></li>
-              <li><a href="juni.html">juni(1)</a></li>
-              <li><a href="kasan.html">kasan(1)</a></li>
-              <li><a href="keta.html">keta(1)</a></li>
-              <li><a href="keycut.html">keycut(1)</a></li>
-              <li><a href="loopj.html">loopj(1)</a></li>
-              <li><a href="loopx.html">loopx(1)</a></li>
-              <li><a href="maezero.html">maezero(1)</a></li>
-              <li><a href="man2.html">man2(1)</a></li>
-              <li><a href="map.html">map(1)</a></li>
-              <li><a href="marume.html">marume(1)</a></li>
-              <li><a href="mdate.html">mdate(1)</a></li>
-              <li><a href="mime-read.html">mime-read(1)</a></li>
-              <li><a href="mojihame.html">mojihame(1)</a></li>
-              <li><a href="msort.html">msort(1)</a></li>
-              <li><a href="nameread.html">nameread(1)</a></li>
-              <li><a href="numchar.html">numchar(1)</a></li>
-              <li><a href="plus.html">plus(1)</a></li>
-              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="yarr.html">yarr(1)</a></li>
+              <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="zen.html">zen(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
-              <li><a href="rjson.html">rjson(1)</a></li>
-              <li><a href="self.html">self(1)</a></li>
-              <li><a href="selr.html">selr(1)</a></li>
-              <li><a href="sm2.html">sm2(1)</a></li>
-              <li><a href="sm4.html">sm4(1)</a></li>
-              <li><a href="sm5.html">sm5(1)</a></li>
-              <li><a href="tarr.html">tarr(1)</a></li>
-              <li><a href="tateyoko.html">tateyoko(1)</a></li>
-              <li><a href="tcat.html">tcat(1)</a></li>
-              <li><a href="tocsv.html">tocsv(1)</a></li>
-              <li><a href="uconv.html">uconv(1)</a></li>
-              <li><a href="ulock.html">ulock(1)</a></li>
-              <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
-              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
+              <li><a href="keycut.html">keycut(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
+              <li><a href="map.html">map(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
+              <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="self.html">self(1)</a></li>
               <li><a href="xmldir.html">xmldir(1)</a></li>
-              <li><a href="yarr.html">yarr(1)</a></li>
-              <li><a href="ycat.html">ycat(1)</a></li>
-              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="mime-read.html">mime-read(1)</a></li>
+              <li><a href="keta.html">keta(1)</a></li>
+              <li><a href="sm4.html">sm4(1)</a></li>
+              <li><a href="getfirst.html">getfirst(1)</a></li>
+              <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
-              <li><a href="zen.html">zen(1)</a></li>
+              <li><a href="cgi-name.html">cgi-name(1)</a></li>
+              <li><a href="sm5.html">sm5(1)</a></li>
+              <li><a href="sm2.html">sm2(1)</a></li>
+              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="join0.html">join0(1)</a></li>
+              <li><a href="kasan.html">kasan(1)</a></li>
+              <li><a href="uriencode.html">uriencode(1)</a></li>
+              <li><a href="tarr.html">tarr(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
+              <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="han.html">han(1)</a></li>
+              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
+              <li><a href="juni.html">juni(1)</a></li>
+              <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
+              <li><a href="plus.html">plus(1)</a></li>
               <li></li>
 
 <li></li>
@@ -139,8 +131,8 @@
 <h3>【名前】</h3>
 <p><code>sm4</code> :  小計、中計</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : sm4 [+h] &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
-Version : Tue Oct 20 15:17:47 JST 2020
+<pre class="list">Usage   : sm4 &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
+Version : Thu Apr 20 00:00:00 JST 2023
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;file&gt;</code>ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
@@ -291,9 +283,9 @@ $</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: Mon Apr 24 09:15:36 JST 2023</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
