--- a/MANUALHTML/delr.html
+++ b/MANUALHTML/delr.html
@@ -127,20 +127,16 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>＜名前＞</h2>
+<h2>delr(1)</h2>
+<h3>【名前】</h3>
 <p><code>delr</code> :  フィールドの非完全一致を見る</p>
-<pre class="prettyprint">＜書式＞
-Usage : delr &lt;field&gt; &lt;str&gt; [&lt;file&gt;]
-Version : Mon Jun 19 23:20:45 JST 2023
-
-＜説明＞
-引数のファイルのテキストデータより、指定したフィールドが
-指定した文字列と完全一致しない行を表示します。
-ファイル名が無いあるいは、&quot;-&quot; の時は、標準入力ファイルを
-期待します。
-
-＜例１ー１＞ 指定したフィールドが完全一致しない行のみ表示する
-$ cat data
+<h3>【書式】</h3>
+<pre class="list">Usage : delr &lt;field&gt; &lt;str&gt; [&lt;file&gt;]
+Version : Mon Jun 19 23:20:45 JST 2023</pre>
+<h3>【説明】</h3>
+<p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致しない行を表示します。ファイル名が無いあるいは、<code>&quot;-&quot;</code>の時は、標準入力ファイルを期待します。</p>
+<h3>【例１ー１】 指定したフィールドが完全一致しない行のみ表示する</h3>
+<pre class="prettyprint">$ cat data
 0001 a
 0002 b
 0003 c
@@ -150,14 +146,14 @@ $ cat result
 0002 b
 0003 c
 0004 c</pre>
-<p>＜例１ー２＞ </p>
+<h3>【例１ー２】 </h3>
 <pre class="prettyprint">$ delr 2 c &lt; data &gt; result
 $ cat result
 0001 a
 0002 b</pre>
     </div>
 
-    <div id="lastmodified">Last modified: MODIFIED</div>
+    <div id="lastmodified">Last modified: Mon Jun 19 23:20:45 JST 2023</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
