--- a/MANUALHTML/comma.html
+++ b/MANUALHTML/comma.html
@@ -141,7 +141,7 @@
 <h3>【書式】</h3>
 <pre class="list">Usage   : comma [+&lt;n&gt;h][-4] [&lt;f1&gt; &lt;f2&gt; ...] &lt;file&gt;
         : comma -d[4] &lt;string&gt;
-Version : Mon Feb 20 01:49:00 JST 2023
+Version : Mon Dec 29 05:14:46 UTC 2025
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの数字フィールドに3桁または4桁のカンマを追加する。カンマを追加するフィールドは引数で指定できる。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
@@ -208,9 +208,9 @@ $</pre>
 <p><a href="keta.html" class="command">keta(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Mon Feb 20 01:48:41 JST 2023</div>
+    <div id="lastmodified">Last modified: Mon Dec 29 05:21:31 UTC 2025</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2025 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
