Use sys.stdin unless /dev/fd/0 is available in sm2, sm4 and sm5.

--- a/MANUALHTML/sm5.html
+++ b/MANUALHTML/sm5.html
@@ -101,13 +101,12 @@
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="delr.html">delr(1)</a></li>
               <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
+              <li><a href="lcalc.html">lcalc(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -132,7 +131,7 @@
 <p><code>sm5</code> :  大計</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : sm5 &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
-Version : Thu Apr 20 00:00:00 JST 2023
+Version : Sun Jan 11 09:31:45 JST 2026
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;input&gt;</code>ファイルに大計(全行の合計値)行を追加する。k1で指定したフィールドからk2で指定したフィールドまでをキー、s1からs2までのフィールドを集計フィールドとして、キー以外の集計各フィールドの全合計の行を最終行に挿入する。この行のキーフィールドは@で補完される。</p>
@@ -226,9 +225,9 @@ sm5 1 6 7 NF &gt; result           ←大計を出力</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Mon Apr 24 09:15:36 JST 2023</div>
+    <div id="lastmodified">Last modified: Sun Jan 11 09:34:39 JST 2026</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2026 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
