--- a/MANUALHTML/sm4.html
+++ b/MANUALHTML/sm4.html
@@ -101,13 +101,12 @@
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="delr.html">delr(1)</a></li>
               <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
+              <li><a href="lcalc.html">lcalc(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -132,7 +131,7 @@
 <p><code>sm4</code> :  小計、中計</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : sm4 &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
-Version : Thu Apr 20 00:00:00 JST 2023
+Version : Sun Jan 11 09:31:45 JST 2026
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;file&gt;</code>ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
@@ -283,9 +282,9 @@ $</pre>
 <p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Mon Apr 24 09:15:36 JST 2023</div>
+    <div id="lastmodified">Last modified: Sun Jan 11 09:34:39 JST 2026</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2026 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
